Corrected the deprecation warnings and code updates for compatibility with Java 17.